src/objects/agf__ADM_Case__c.object
<CustomObject>
    <fields>
        <fullName>agf__Account_Id__c</fullName>
        <externalId>true</externalId>
        <label>Account ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Account_Link__c</fullName>
        <formula>HYPERLINK( &quot;https://org62.my.salesforce.com/&quot; &amp; agf__Account_Id__c , agf__Account_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Account_Name__c</fullName>
        <label>Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Account_Stage__c</fullName>
        <label>Red Account Stage</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Account_Support_SBR_Category__c</fullName>
        <label>Account Support SBR Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Age__c</fullName>
        <formula>ROUND(DATETIMEVALUE (TODAY()) - agf__Case_Created_Date__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Case_Created_Date__c</fullName>
        <label>Case Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>agf__Case_ID_Set__c</fullName>
        <label>Case ID Set</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>agf__Case_ID__c</fullName>
        <externalId>true</externalId>
        <label>Case ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Case_Number__c</fullName>
        <label>Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Case_Owner_ID__c</fullName>
        <label>Case Owner ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Case_Owner_Link__c</fullName>
        <formula>HYPERLINK( &quot;https://org62.my.salesforce.com/&quot; &amp; agf__Case_Owner_ID__c , agf__Case_Owner__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Case_Owner__c</fullName>
        <label>Case Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Case_Reason__c</fullName>
        <label>Case Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Case_Status__c</fullName>
        <label>Case Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Case_Subject_Link__c</fullName>
        <formula>HYPERLINK( &quot;https://org62.my.salesforce.com/&quot; &amp; agf__Case_ID__c , agf__Case_Subject__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Case_Subject__c</fullName>
        <label>Case Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Cases_Link__c</fullName>
        <formula>HYPERLINK( &quot;https://org62.my.salesforce.com/&quot; &amp;  agf__Case_ID__c , agf__Case_Number__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cases Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Closed__c</fullName>
        <description>Formula designed as per request in the story https://gus.my.salesforce.com/apex/adm_userstorydetail?id=a07B00000011BKiIAM&amp;sfdc.override=1</description>
        <formula>OR(agf__Case_Status__c  = &apos;Closed - Resolved&apos;,agf__Case_Status__c = &apos;Closed - Feature Req/Bug&apos;,agf__Case_Status__c = &apos;Closed - No response from customer&apos;, agf__Case_Status__c = &apos;Closed - Cust Credit&apos;, agf__Case_Status__c = &apos;Closed - Write Off&apos;, agf__Case_Status__c = &apos;Closed - WO/Collect&apos;,
agf__Case_Status__c = &apos;Closed - Future Consideration&apos;,agf__Case_Status__c = &apos;Closed - Rejected&apos;,
agf__Case_Status__c = &apos;Closed - Duplicate&apos;,agf__Case_Status__c = &apos;Closed - Request Submitted&apos;,
agf__Case_Status__c = &apos;Closed - Completed&apos;,agf__Case_Status__c = &apos;Closed - Reviewed&apos;,
agf__Case_Status__c = &apos;Closed - Request Received&apos;,agf__Case_Status__c = &apos;Complete/Closed&apos;,
agf__Case_Status__c = &apos;Closed - Feature Request Submitted&apos;,agf__Case_Status__c = &apos;Bug Fix Submitted&apos;,
agf__Case_Status__c = &apos;Fulfilled&apos;, agf__Case_Status__c = &apos;Approved&apos;,
agf__Case_Status__c = &apos;Rejected&apos;, agf__Case_Status__c = &apos;Closed-Sent to Feature Roadmap Owner&apos;, agf__Case_Status__c = &apos;Closed-Workaround provided&apos;,
agf__Case_Status__c = &apos;Closed-Feature Implemented/Exists&apos;,agf__Case_Status__c = &apos;Closed - Directed to IdeaExchange&apos;,
agf__Case_Status__c = &apos;Closed - No response from Sales (Closed)&apos;, agf__Case_Status__c = &apos;Implemented&apos;,
agf__Case_Status__c = &apos;Closed - Routed to Internal Helpdesk&apos;, agf__Case_Status__c = &apos;Closed&apos;,
agf__Case_Status__c = &apos;Closed – Delivered&apos;, agf__Case_Status__c = &apos;Closed – Withdrawn&apos;, agf__Case_Status__c = &apos;Closed – Feature Exists&apos;,
agf__Case_Status__c = &apos;Closed – Workaround&apos;, agf__Case_Status__c = &apos;Closed – IdeaExchange&apos;, agf__Case_Status__c = &apos;Closed - Implemented&apos;,
agf__Case_Status__c = &apos;Closed - Request out of Scope&apos;, agf__Case_Status__c = &apos;Closed - Cust. Invoiced (Sales Ops only)&apos;, agf__Case_Status__c = &apos;Closed - Never&apos;,
agf__Case_Status__c = &apos;Auto-response&apos;, agf__Case_Status__c = &apos;Closed - No response from Partner&apos;, agf__Case_Status__c = &apos;Closed - Support Issue&apos;,
agf__Case_Status__c = &apos;Closed - Services/Sales Issue&apos;, agf__Case_Status__c = &apos;Closed - Product Issue&apos;, agf__Case_Status__c = &apos;Closed - Forward to Partner&apos;,
agf__Case_Status__c = &apos;Closed - Edition Upgrade Needed&apos;, agf__Case_Status__c = &apos;Closed - Self Service&apos;, agf__Case_Status__c = &apos;Closed - Customer Closed&apos;,
agf__Case_Status__c = &apos;Closed - Partner Resolved&apos;, agf__Case_Status__c = &apos;No Action Needed&apos;, agf__Case_Status__c = &apos;Closed - No CSAT&apos;)</formula>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Date_Time_Closed__c</fullName>
        <label>Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>agf__Escalated_Status__c</fullName>
        <label>Escalated Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__FunctionalArea__c</fullName>
        <label>Functional Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__General_Application_Area__c</fullName>
        <label>General Application Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Geo__c</fullName>
        <label>Geo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__New_Feature_Release_Related__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Feature or Release Related</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Parent_Account_Id__c</fullName>
        <label>Parent Account ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Parent_Account_Link__c</fullName>
        <formula>HYPERLINK( &quot;https://org62.my.salesforce.com/&quot; &amp; agf__Parent_Account_Id__c , agf__Parent_Account_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Parent_Account_Name__c</fullName>
        <label>Parent Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Support_Skill_Group__c</fullName>
        <label>Support_Skill_Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Support_Tier_3_Owner_Link__c</fullName>
        <formula>HYPERLINK( &quot;https://org62.my.salesforce.com/&quot; &amp; agf__Support_Tier_3_Owner__c , agf__Support_Tier_3_Owner_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Tier 3 Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Support_Tier_3_Owner_Name__c</fullName>
        <label>Support Tier 3 Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Support_Tier_3_Owner__c</fullName>
        <label>Support Tier 3 Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Work__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipName>Work62OrgCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>62 Org Case</label>
    <listViews>
        <fullName>agf__All</fullName>
        <columns>agf__Case_Number__c</columns>
        <columns>agf__Work__c</columns>
        <columns>NAME</columns>
        <columns>agf__External_ID__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>agf__Account_Id__c</columns>
        <columns>agf__Parent_Account_Id__c</columns>
        <columns>agf__Case_Owner_ID__c</columns>
        <columns>agf__Case_Owner_Link__c</columns>
        <columns>agf__Cases_Link__c</columns>
        <columns>agf__Case_Subject_Link__c</columns>
        <columns>agf__Account_Link__c</columns>
        <columns>agf__Parent_Account_Link__c</columns>
        <columns>agf__Case_Created_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Related Case ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>62 Org Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>